--- a/src/renderer/components/Inputs/InputEye/styles.module.sass
+++ b/src/renderer/components/Inputs/InputEye/styles.module.sass
@@ -12,20 +12,32 @@
       color: $white
     svg
       color: $white
+  .eye
+    button
+      &:hover
+        background-color: $gray-800
 
 
 .light
   .input
     background-color: $gray-100
     input
-      background-color: $gray-100
+      background-color: $gray-100 
       color: $black
     svg
       color: $black
-
+  .eye
+    button
+      &:hover
+        background-color: $gray-400
 .red
   svg
     color: $red-100 !important
+
+  
+.green
+  svg
+    color: $green-100 !important
 // --------------------------------------------------------------
 // -------------------------- SETTINGS --------------------------
 // --------------------------------------------------------------
@@ -72,8 +84,6 @@
 
         transition: background-color 0.2s ease
 
-        &:hover
-          background-color: $gray-800
       
 
         
