--- a/src/renderer/components/Navbar/styles.module.sass
+++ b/src/renderer/components/Navbar/styles.module.sass
@@ -12,7 +12,7 @@
     button
       background-color: $gray-700
       &.selected
-        background-color: $blue-100
+        background-color: $blue-100 !important
         svg
           color: $white
       &:hover
@@ -27,7 +27,7 @@
     button
       background-color: $gray-100
       &.selected
-        background-color: $blue-100
+        background-color: $blue-100 !important
         svg
           color: $white
       &:hover
@@ -102,4 +102,6 @@
       .notificated
         position: relative
         background-color: $red-100 !important
+        svg
+          color: $white !important
        
