--- a/src/renderer/pages/Auth/Register/styles.module.sass
+++ b/src/renderer/pages/Auth/Register/styles.module.sass
@@ -13,6 +13,9 @@
     @media (min-width: 1400px)
       top: 100px
 
+    @media (max-height: 657px)
+      top: 20px !important
+
   .registerContainer
     @include flex(center, center, column)
     width: 100%
