--- a/src/renderer/pages/CreateOrganization/StepThree/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/StepThree/styles.module.sass
@@ -1,73 +1,58 @@
 @use '../../../styles/_util' as *
 
+.stepFour.dark
+  .emails_container
+    @include scroolbarDark()
+.stepFour.light
+  .emails_container
+    @include scroolbarLight()
+  
+
 .stepFour
   @include flex(center ,center, column)
   width: 100%
 
+  h3
+    font-size: 1.1rem
+    font-weight: 600
+    
   .list
     width: 100%
     @include flex(center,center, column)
-    margin-bottom: 5rem
-    margin-top: 2rem
+    margin-bottom: 2rem
+    margin-top: 1rem
+    border: 1px solid $gray-300
+    padding: 1rem 0
+    border-radius: $default-radius
+    
     h4
       margin-bottom: 1rem
       margin-left: 1rem
+      font-weight: 600
+
     >div
       width: 100%
       @include flex(flex-start ,space-around, row)
 
     .emails_container
-      max-height: 120px
-      height: 120px
+      max-height: 160px
+      height: 100%
       overflow: auto
 
       @media (max-height:800px)
         max-height: 80px
         height: 80px
+
       .emails_list
-        @include flex(center ,center, column)
+        @include flex(center, flex-start, column)
         gap: .5rem
+        margin-top: .5rem
         text-align: center
-        width:100%
+        width: 100%
 
-    ::-webkit-scrollbar
-      width: 5px
-    ::-webkit-scrollbar-track
-      background: #f1f1f1
-    ::-webkit-scrollbar-thumb
-      background: $blue-100
-    ::-webkit-scrollbar-thumb:hover
-      background: $blue-100-hover
 
-  .email
-    width: 100%
-    @include flex(center ,center, column)
-
-    >div
-      @include flex(center ,space-around, row)
-      gap: 1rem
-      margin-bottom: 2rem
-      position: relative
-      width: 100%
-
-      .email_switch
-        @include flex(center ,space-around, row)
-        width: 240px
-        gap: .5rem
-
-        p
-          width: 100%
-      .error
-        position: absolute
-        left: 5px
-        bottom: -1.3rem
-        color: $red-100
-
-    button
-      background-color: $blue-100
-      max-width: 350px
-      &:hover
-        background-color: $blue-100-hover
+  button
+    max-width: 350px
 
 
 
