--- a/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
@@ -14,17 +14,18 @@
     width: 100%
     
     h3
-      font-size: 1.2rem
+      font-size: 1.1rem !important
+      font-weight: 600
       @media (max-height: 650px)
         font-size: 1.1rem
 
     img
       border-radius: 5rem
-      min-width: 100px
-      min-height: 100px
+      min-width: 90px
+      min-height: 90px
 
-      max-width: 100px
-      height: 100px
+      max-width: 90px
+      height: 90px
 
       @media (max-height: 650px)
         width: 80px
@@ -42,11 +43,6 @@
         width: 150px
         height: 35px
 
-      .red
-        background-color: $red-100
-
-        &:hover
-          background-color: $red-100-hover
         
     .name_file
       margin-bottom: 2rem
