--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -78,6 +78,9 @@ header
 
     .description
       padding: .5rem 0
+      h3
+        font-size: 1rem
+        font-weight: 600
       p
         color: $gray-500
 
