--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
@@ -29,7 +29,6 @@
       position: relative
       font-weight: 500
       
-
       &:nth-child(2)
         min-width: 130px
       &::before
@@ -45,13 +44,12 @@
           width: 100%
 
     .addParticipantButton
-      background-color: $gray-700
       max-width: 200px
       margin-left: auto
-      &:hover
-        background-color: $gray-600
-        &::before
-          width: 0 !important
+
+      &::before
+        height: 0
+
     .selected
       position: relative
       &::before
