--- a/src/renderer/components/Badge/styles.module.sass
+++ b/src/renderer/components/Badge/styles.module.sass
@@ -4,16 +4,16 @@
   background-color: $gray-600
   color: $white
   padding: 0 15px
-  font-size: .8rem
-  border-radius: 5rem
+  border-radius: $default-radius
   height: 30px
+  gap: .5rem
 
   svg
-    height: 15px
-    widows: 15px
-
-    margin-top: 4px
-    margin-left: 10px
+    font-size: 18px 
     color: $white
-    font-size: 1rem
+
+
+    transition: color 0.2s ease
+    &:hover
+      color: $red-100
 
