--- a/src/renderer/components/Buttons/Button/styles.module.sass
+++ b/src/renderer/components/Buttons/Button/styles.module.sass
@@ -7,11 +7,17 @@
   &:hover
     background-color: $blue-100-hover !important
 
+  svg
+    color: $white !important
+
 .red
   background-color: $red-100 !important
+  color: $white
 
   &:hover
     background-color: $red-100-hover !important
+  svg
+    color: $white !important
 
 .green
   background-color: $green-100 !important
@@ -43,7 +49,7 @@
   button
     background-color: $gray-300
     &:hover
-      background-color: $gray-500
+      background-color: $gray-400
 
     &:disabled
       background-color: $gray-400 !important
