--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -25,11 +25,6 @@
       &:hover
         background-color: $gray-400
 
-  .input
-    input
-      color: $black
-      &:hover
-        background-color: $gray-400
 
 
 // --------------------------------------------------------------
@@ -112,9 +107,7 @@
     visibility: hidden
     z-index: 400 !important
 
-    -webkit-box-shadow: 0px 0px 20px -8px rgba(0,0,0,0.75)
-    -moz-box-shadow: 0px 0px 20px -8px rgba(0,0,0,0.75)
-    box-shadow: 0px 0px 20px -8px #000000
+    box-shadow: 0px 0px 20px -8px #0000002a
 
     div
       padding: 10px 20px
