--- a/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
@@ -6,20 +6,30 @@
 
 .workspaceSettingsMenu.dark
   color: $white
-  main
-    ul
-      li
-        button
-          color: $white
+
+
+  button
+    background-color: transparent
+    &:hover
+      background-color: $gray-600
+    &.selected
+      background-color: $gray-600 !important
+      color: $white
+
   
 .workspaceSettingsMenu.light
   color: $black
+  
+  button
+    background-color: transparent !important
+    &:hover
+      background-color: $gray-300 !important
+    &.selected
+      background-color: $gray-300 !important
+      color: $black
+      &:hover
+        background-color: $gray-300 !important 
 
-  main
-    ul
-      li
-        button
-          color: $black
 
 // --------------------------------------------------------------
 // -------------------------- SETTINGS --------------------------
@@ -57,25 +67,19 @@
 
       li
         width: 100%
-        margin-top: 5px
+        margin-top: 1px
 
-        button
-          @include flex(center, flex-start, row)
-          width: 100%
-          gap: 1rem
-          padding: .3rem .7rem
-          border-radius: 5px
-          transition: background-color 0.2s ease, color 0.2s ease
+      button
+        @include flex(center, flex-start, row)
+        width: 100%
+        gap: 1rem
+        padding: .3rem .7rem
+        border-radius: 5px
+        transition: background-color 0.2s ease, color 0.2s ease
 
-          svg
-            font-size: 1.2rem
+        svg
+          font-size: 1.2rem
 
-          &:hover
-            background-color: $gray-700
-            color: $white
-          &.selected
-            background-color: $gray-700
-            color: $white
 
   footer
     @include flex(center, center, row)
@@ -83,11 +87,8 @@
     height: 50px
 
     button
-      @include flex(center  , flex-start, row)
-      border-radius: $default-radius
-      width: 100%
-      padding: 0 .5rem
-
+      @include flex(center, center, row)
+    
       svg
         font-size: 1.1rem
 
