--- a/src/renderer/pages/Auth/styles.module.sass
+++ b/src/renderer/pages/Auth/styles.module.sass
@@ -4,7 +4,7 @@
   @include flex(center, center, column)
   height: 100vh
   width: 100%
-
+    
   .background
     @include flex(center, center, column)
     position: absolute
@@ -17,30 +17,36 @@
     z-index: 1000
     transition: right 2s ease-in-out
 
-    img
+    .imageContainer
+      margin-top: auto
+      border: 1px solid red
+      height: 20%
+      width: 100%
       position: relative
+    img
+      position: fixed
       max-width: 400px
       transition: left 2s ease-in-out, right 2s ease-in-out,  opacity 1.5s ease
-      
-      &:first-child
-        right: 30%
-        top: 37%
-        opacity: 0
 
-        @media (min-width: 1500px)
-          max-width: 550px !important
-          right: 35%
-          top: 35% !important
+      // &:first-child
+      //   right: 30%
+      //   top: 37%
+      //   opacity: 0
 
-      &:last-child
-        left: 35%
-        top: 20%
-        opacity: 1
+      //   @media (min-width: 1500px)
+      //     max-width: 550px !important
+      //     right: 35%
+      //     top: 35% !important
 
-        @media (min-width: 1500px)
-          max-width: 550px !important
-          left: 35%
-          top: 20%
+      // &:last-child
+      //   left: 35%
+      //   top: 20%
+      //   opacity: 1
+
+      //   @media (min-width: 1500px)
+      //     max-width: 550px !important
+      //     left: 35%
+      //     top: 20%
 
   .form
     @include flex(center, center, row)
@@ -69,12 +75,17 @@
     .registerText, .loginText
       @include flex(center, center, column)
       position: absolute
-      top: 100px
+      top: 70px
       width: 45%
       color: $white
       z-index: 2000
       gap: 2rem
       transition: opacity 1.5s ease, right 1.5s ease, left 1.5s ease
+      
+
+      h1
+        font-size: 1.2rem
+        font-weight: 600
 
       p
         max-width: 600px
@@ -96,18 +107,18 @@
 
 .signUpMode
   .background
-    right: -90%
+    right: -85%
 
-    img
-      &:first-child
-        right: 35%
-        top: 37%
-        opacity: 1
+    // img
+    //   &:first-child
+    //     right: 35%
+    //     top: 37%
+    //     opacity: 1
 
-      &:last-child
-        left: 600px
-        top: 20%
-        opacity: 0
+    //   &:last-child
+    //     left: 600px
+    //     top: 20%
+    //     opacity: 0
 
   .form
     .register
