--- a/src/renderer/pages/CreateOrganization/StepOne/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/StepOne/styles.module.sass
@@ -4,10 +4,9 @@
   gap: 1rem
   height: 100%
 
-  p
-    font-size: 1rem
   h4
     font-size: 1.1rem
+    font-weight: 600
 
 .stepOne_svg
   margin-top: -5rem
