--- a/src/renderer/pages/CreateOrganization/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/styles.module.sass
@@ -7,10 +7,11 @@
 
 .createWorkspace
   @include flex(center, center, column)
-  padding: 1rem
+  padding: 1rem 0
   width: 100%
   height: 100%
   position: relative
+  
 
   .steps
     width: 100%
@@ -27,6 +28,7 @@
     height: 100%
     min-height: 350px
     overflow: auto
+    max-height: 700px
 
     
 
@@ -51,20 +53,11 @@
     max-width: 400px
     display: flex
     flex-direction: column
-    gap: 1rem
-    bottom: 3rem
+    gap: .5rem
 
     @media (max-height: 800px)
       bottom: 1rem
-      margin-top: 1rem
-      button
-        height: 40px
-
-    .backButton
-      width: 100%
-
-      button
-        background-color: $red-100
+      margin-top: 2rem
 
 
 
