--- a/src/renderer/pages/WorkspaceSettings/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/styles.module.sass
@@ -56,10 +56,6 @@
         >div
           width: 100%
 
-        .red
-          background-color: $red-100
-          &:hover
-            background-color: $red-100-hover
 
             
     .form
@@ -82,10 +78,6 @@
           max-width: 300px
           gap: 1rem
 
-          .red
-            background-color: $red-100
-            &:hover
-              background-color: $red-100-hover
 
     .separator
       position: relative
@@ -118,8 +110,8 @@
         width: 100%
 
         h3
-          margin-bottom: 8px
-          font-weight: 400
+          font-weight: 600
+          font-size: 1rem
         .text
           width: 100%
           margin-right: 2rem
@@ -129,8 +121,3 @@
         button
           max-width: 200px
           margin-left: auto
-
-          background-color: $red-100
-
-          &:hover
-            background-color: $red-100-hover
