--- a/src/renderer/pages/WorkspaceMembers/styles.module.sass
+++ b/src/renderer/pages/WorkspaceMembers/styles.module.sass
@@ -74,6 +74,7 @@
         margin-top: 3rem
 
         overflow: auto
+        overflow-x: hidden
 
         .participants
           @include flex(center, center, column)
