--- a/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
@@ -85,12 +85,15 @@
     @include flex(center, center, row)
     width: 100%
     height: 50px
+    
+    color: $red-100 !important
 
     button
       @include flex(center, center, row)
     
       svg
         font-size: 1.1rem
+        color: $red-100 !important
 
 
 
