--- a/src/renderer/components/NewSidebar/styles.module.sass
+++ b/src/renderer/components/NewSidebar/styles.module.sass
@@ -18,7 +18,8 @@
 
 .light
   color: $black
-  bakground-color: $white
+  background-color: $white
+
   .openButton
     color: $black
 
@@ -27,7 +28,7 @@
 
 
 .newSidebar.light
-    border-right: 1px solid $gray-300
+  border-right: 1px solid $gray-300
 
     
   
