--- a/src/renderer/components/Modals/FieldModalWithDropdown/styles.module.sass
+++ b/src/renderer/components/Modals/FieldModalWithDropdown/styles.module.sass
@@ -37,9 +37,10 @@
   border-radius: .5rem
   gap: 1rem
 
-  h2
-    font-weight: 600 
-    font-size: 1.3rem
+  h3
+    font-weight: 600
+    text-align: center
+    font-size: 1.1rem
 
 
     &:nth-child(2)
