--- a/src/renderer/pages/Auth/Register/styles.module.sass
+++ b/src/renderer/pages/Auth/Register/styles.module.sass
@@ -26,14 +26,17 @@
       margin-top: 8rem
       opacity: 0
       transition: opacity 0.5s ease
+      z-index: 2001
 
       div
         width: 100%
+
 
     .buttonStart
       @include flex(center, center, column)
       position: absolute
       width: 100%
+      z-index: 2002
 
       button
         transition: all 0.3s ease
