--- a/src/renderer/pages/Auth/styles.module.sass
+++ b/src/renderer/pages/Auth/styles.module.sass
@@ -4,7 +4,7 @@
   @include flex(center, center, column)
   height: 100vh
   width: 100%
-    
+
   .background
     @include flex(center, center, column)
     position: absolute
@@ -40,7 +40,6 @@
 
   .text
 
-
     .registerText, .loginText
       @include flex(center, center, column)
       position: absolute
@@ -49,8 +48,12 @@
       color: $white
       z-index: 2000
       gap: 2rem
-      transition: opacity 1.5s ease, right 1.5s ease, left 1.5s ease
-      
+      transition: opacity 1.5s ease, right 1.5s ease, left 1.5s ease, visibility 1.2s ease
+
+      span
+        width: 100%
+        text-align: center
+
       h1
         font-size: 1.2rem
         font-weight: 600
@@ -60,6 +63,7 @@
 
       button
         max-width: 200px
+        margin-top: -1rem
 
     .registerText
       right: -350px
@@ -80,7 +84,7 @@
         @media (max-height: 630px)
           max-width: 280px
           bottom: 3rem
-    
+
     .loginText
       left: 20px
       opacity: 1
@@ -123,6 +127,7 @@
 
     .loginText
       opacity: 0
-      left: -200px
+      left: -300px
+      visibility: hidden
 
 
