--- a/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
+++ b/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
@@ -1,5 +1,5 @@
 @use '../../../../styles/_util' as *
-  
+
 
 .notification.dark
   border-color: $gray-700
@@ -15,7 +15,7 @@
       background-color: $gray-600
 
 
-   
+
 
 .notification.light
   @include scroolbarDark()
@@ -35,17 +35,17 @@
     button
       svg
         color: $gray-100
-        
+
 .notification.open
   width: 0
   height: 0
   opacity: 0
   visibility: hidden
-  
+
 .notification
   @include flex(flex-start, flex-start, column)
   width: 100%
-  
+
 
   max-width: 550px
   max-height: 300px
@@ -54,13 +54,13 @@
 
   position: absolute
   z-index: 3001
-  border: 1px solid 
+  border: 1px solid
   border-radius: $default-radius
   padding: 1rem 0
 
   right: 50px
   top: 50px
-  
+
   >h3
     margin-left: 1rem
 
@@ -72,7 +72,7 @@
     overflow: auto
     margin-top: 16px
     gap: 1rem
-    padding: 1rem 
+    padding: 1rem
 
     .notificationBox
       @include flex(flex-start, flex-start, row)
@@ -91,13 +91,13 @@
       h3
         font-size: 1.1rem
         font-weight: 600
-       
+
 
       .text
         @include flex(flex-start, flex-start, row)
         width: 100%
         min-width: 340px
-      
+
       .actions
         @include flex(center, flex-end, row)
         gap: 8px
@@ -106,6 +106,14 @@
         >div
           max-width: 40px
           width: 100%
-          
 
+  .notNotification
+    @include flex(center, center, column)
+    width: 100%
+
+    h4
+      color: $gray-500
+    svg
+      font-size: 2rem
+      color: $gray-400
 
