--- a/src/renderer/components/NewSidebar/components/WorkspaceSettingsMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/components/WorkspaceSettingsMenu/styles.module.sass
@@ -1,4 +1,4 @@
-@use '../../../styles/_util' as *
+@use '../../../../styles/_util' as *
 
 // --------------------------------------------------------------
 // ---------------------------- THEME ---------------------------
@@ -16,10 +16,10 @@
       background-color: $gray-600 !important
       color: $white
 
-  
+
 .workspaceSettingsMenu.light
   color: $black
-  
+
   button
     background-color: transparent !important
     &:hover
@@ -28,7 +28,7 @@
       background-color: $gray-300 !important
       color: $black
       &:hover
-        background-color: $gray-300 !important 
+        background-color: $gray-300 !important
 
 
 // --------------------------------------------------------------
@@ -85,12 +85,12 @@
     @include flex(center, center, row)
     width: 100%
     height: 50px
-    
+
     color: $red-100 !important
 
     button
       @include flex(center, center, row)
-    
+
       svg
         font-size: 1.1rem
         color: $red-100 !important
