--- a/src/renderer/routes/styles.module.sass
+++ b/src/renderer/routes/styles.module.sass
@@ -16,4 +16,10 @@
   flex-direction: column
   z-index: 1
 
+.fullCenter
+  width: 100%
+  height: 100%
+  display: flex
+  justify-content: center
+  align-content: flex-start
 
