--- a/src/renderer/styles/dropdown.module.sass
+++ b/src/renderer/styles/dropdown.module.sass
@@ -5,14 +5,52 @@ button
   all: unset
 
 
+.DropdownMenuContent.dark
+  background-color: $gray-700
+  box-shadow: 0px 10px 38px -10px rgb(22, 23, 24), 0px 10px 20px -15px rgba(22, 23, 24, 0.815)
+  .DropdownMenuLabel
+    color: $gray-400
+
+
+
+  .DropdownMenuItem,
+  .DropdownMenuCheckboxItem,
+  .DropdownMenuRadioItem,
+  .DropdownMenuSubTrigger
+    color: $white
+
+  .DropdownMenuItem[data-highlighted],
+  .DropdownMenuCheckboxItem[data-highlighted],
+  .DropdownMenuRadioItem[data-highlighted],
+  .DropdownMenuSubTrigger[data-highlighted]
+    background-color: $blue-100
+    color: $white
+
+.DropdownMenuContent.light
+  background-color: $white
+  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
+  .DropdownMenuLabel
+    color: $gray-700
+
+  .DropdownMenuItem,
+  .DropdownMenuCheckboxItem,
+  .DropdownMenuRadioItem,
+  .DropdownMenuSubTrigger
+    color: $black
+
+  .DropdownMenuItem[data-highlighted],
+  .DropdownMenuCheckboxItem[data-highlighted],
+  .DropdownMenuRadioItem[data-highlighted],
+  .DropdownMenuSubTrigger[data-highlighted]
+    background-color: $blue-100
+    color: $white
+
 .DropdownMenuContent,
 .DropdownMenuSubContent
-  min-width: 190px
+  min-width: 220px
   z-index: 1005 !important
-  background-color: white
   border-radius: 6px
   padding: 5px
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
   animation-duration: 400ms
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1)
   will-change: transform, opacity
@@ -34,12 +72,12 @@ button
   animation-name: slideRightAndFade
 
 .DropdownMenuItem.red
-  background-color: $red-100
-  color: $white
+  background-color: $red-100 !important
+  color: $white !important
 
   &:hover
-    background-color: $red-100-hover
-    color: $white
+    background-color: $red-100-hover !important
+    color: $white !important
 
 .DropdownMenuItem,
 .DropdownMenuCheckboxItem,
@@ -47,7 +85,6 @@ button
 .DropdownMenuSubTrigger
   font-size: .9rem
   line-height: 1
-  color: $blue-100
   border-radius: 3px
   display: flex
   align-items: center
@@ -70,18 +107,12 @@ button
   color: $gray-600
   pointer-events: none
 
-.DropdownMenuItem[data-highlighted],
-.DropdownMenuCheckboxItem[data-highlighted],
-.DropdownMenuRadioItem[data-highlighted],
-.DropdownMenuSubTrigger[data-highlighted]
-  background-color: $gray-200
-  color: $blue-100
 
 .DropdownMenuLabel
   padding-left: 25px
   font-size: 12px
   line-height: 25px
-  color: $gray-700
+
 
 .DropdownMenuSeparator
   height: 1px
@@ -96,6 +127,9 @@ button
   align-items: center
   justify-content: center
 
+.DropdownMenuItem
+  &:hover
+    transition: background 0.2s ease, color 0.2s ease
 .DropdownMenuArrow
   fill: white
 
@@ -107,7 +141,7 @@ button
   display: inline-flex
   align-items: center
   justify-content: center
-  color: var(--violet11)
+  color: red
   background-color: white
   box-shadow: 0 2px 10px $blue-100
 
