--- a/src/renderer/pages/SafeBoxGroup/components/ContextMenu/styles.module.sass
+++ b/src/renderer/pages/SafeBoxGroup/components/ContextMenu/styles.module.sass
@@ -1,3 +1,49 @@
+@use "../../../../styles/_util" as *
+
+
+.ContextMenuContent.dark
+  background-color: $gray-700
+  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
+
+  .ContextMenuItem,
+  .ContextMenuCheckboxItem,
+  .ContextMenuRadioItem,
+  .ContextMenuSubTrigger
+    color: $white
+
+  .ContextMenuItem[data-highlighted],
+  .ContextMenuCheckboxItem[data-highlighted],
+  .ContextMenuRadioItem[data-highlighted],
+  .ContextMenuSubTrigger[data-highlighted]
+    background-color: $blue-100
+    color: $white
+
+  .ContextMenuSeparator
+    background-color: $gray-300
+
+.ContextMenuContent.light
+  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.863), 0px 10px 20px -15px rgba(22, 23, 24, 0.658)
+  background-color: $white
+  color: $black
+
+  .ContextMenuItem,
+  .ContextMenuCheckboxItem,
+  .ContextMenuRadioItem,
+  .ContextMenuSubTrigger
+    color: $gray-700
+
+  .ContextMenuItem[data-highlighted],
+  .ContextMenuCheckboxItem[data-highlighted],
+  .ContextMenuRadioItem[data-highlighted],
+  .ContextMenuSubTrigger[data-highlighted]
+    background-color: $blue-100
+    color: $white
+
+  .ContextMenuSeparator
+    background-color: $gray-400
+
+
+
 .ContextMenuTrigger
   display: block
   border: 2px white dashed
@@ -9,16 +55,13 @@
   width: 300px
   text-align: center
 
-
 .ContextMenuContent,
 .ContextMenuSubContent
   z-index: 5000 !important
   min-width: 220px
-  background-color: white
   border-radius: 6px
   overflow: hidden
   padding: 5px
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
 
 
 .ContextMenuItem,
@@ -27,46 +70,37 @@
 .ContextMenuSubTrigger
   font-size: 13px
   line-height: 1
-  color: var(--violet11)
   border-radius: 3px
   display: flex
   align-items: center
-  height: 25px
+  gap: .5rem
+  height: 30px
   padding: 0 5px
   position: relative
-  padding-left: 25px
   user-select: none
   outline: none
 
 .ContextMenuSubTrigger[data-state='open']
-  background-color: var(--violet4)
-  color: var(--violet11)
+  background-color: $blue-100
+  color: $white
 
 .ContextMenuItem[data-disabled],
 .ContextMenuCheckboxItem[data-disabled],
 .ContextMenuRadioItem[data-disabled],
 .ContextMenuSubTrigger[data-disabled]
-  color: var(--mauve8)
+  color: green
   pointer-events: 'none'
-
-.ContextMenuItem[data-highlighted],
-.ContextMenuCheckboxItem[data-highlighted],
-.ContextMenuRadioItem[data-highlighted],
-.ContextMenuSubTrigger[data-highlighted]
-  background-color: var(--violet9)
-  color: var(--violet1)
 
 
 .ContextMenuLabel
   padding-left: 25px
   font-size: 12px
   line-height: 25px
-  color: var(--mauve11)
+  color: red
 
 
 .ContextMenuSeparator
   height: 1px
-  background-color: var(--violet6)
   margin: 5px
 
 
@@ -82,10 +116,10 @@
 .RightSlot
   margin-left: auto
   padding-left: 20px
-  color: var(--mauve11)
+  color: red
 
 [data-highlighted] > .RightSlot
   color: white
 
 [data-disabled] .RightSlot
-  color: var(--mauve8)
+  color: red
