--- a/src/renderer/styles/dropdown.module.sass
+++ b/src/renderer/styles/dropdown.module.sass
@@ -4,7 +4,7 @@
 button
   all: unset
 
-
+.DropdownMenuSubContent.dark,
 .DropdownMenuContent.dark
   background-color: $gray-700
   box-shadow: 0px 10px 38px -10px rgb(22, 23, 24), 0px 10px 20px -15px rgba(22, 23, 24, 0.815)
@@ -26,6 +26,7 @@ button
     background-color: $blue-100
     color: $white
 
+.DropdownMenuSubContent.light,
 .DropdownMenuContent.light
   background-color: $white
   box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
