--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -1,7 +1,7 @@
 @use '../../../../styles/_util' as *
 
 .dark
-  .actions
+  .action
     button
       color: $white
       background-color: $gray-700
@@ -23,7 +23,7 @@
           background-color: $gray-500
 
 .light
-  .actions
+  .action
     button
       color: $black
       background-color: $gray-100
@@ -40,20 +40,28 @@
         &:hover
           background-color: $gray-400
 
-
 header
-  @include flex(center, center, column)
+  @include flex(center, space-between, row)
   width: 100%
   gap: 1rem
+  position: relative
+  border: 1px solid red
 
   .action
     display: flex
-    position: absolute
     right: 0
     top: 15px
-
-    width: 200px
     gap: 1rem
+    min-width: 300px
+
+    border: 1px solid blue
+
+    .createSafeBoxActions
+      @include flex(center, center, row)
+      gap: 1rem
+      min-width: 300px
+      max-width: 300px
+      z-index: 600
 
     .iconButton
       padding: .2rem
@@ -73,25 +81,11 @@ header
       color: $white !important
     &:hover
       background-color: $red-100-hover !important
-  .actions
-    @include flex(flex-start, flex-end, row)
-    width: 100%
-    max-width: 450px
-    gap: 1rem
-    margin-left: auto
-
-    .createSafeBoxActions
-      @include flex(center, flex-end, row)
-      gap: 1rem
-      max-width: 300px
-      width: 100%
 
   .title
     @include flex(flex-start, flex-start, row)
-    width: 100%
     height: 100%
     gap: 1rem
-    position: relative
 
     &::before
       content: ''
@@ -112,15 +106,13 @@ header
       p
         color: $gray-500
 
-
   .dropdown
     @include flex(center, center, row)
     width: 100%
-    gap: 2rem
-    position: relative
     color: $black
     z-index: 300
     margin-top: 8px
+    position: relative
 
     &::before
       content: ''
@@ -129,8 +121,9 @@ header
       height: 1px
       background-color: $gray-300
       bottom: -1rem
+      right: 0
 
-    svg
+    >svg
       min-width: 80px
       min-height: 80px
 
@@ -163,4 +156,3 @@ header
       div
         padding: 12px 20px
         cursor: pointer
-
