--- a/src/renderer/pages/Workspace/ViewSafeBox/SharingModal/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/SharingModal/styles.module.sass
@@ -6,11 +6,8 @@
   width: 100vw
   position: fixed
   inset: 0
-
   z-index: 1002
-
   background: rgba(0, 0, 0, 0.75)
-
   animation: overlayShow 200ms cubic-bezier(0.16, 1, 0.3, 1)
 
 .content
@@ -30,12 +27,12 @@
   >h2
     font-size: 1.3rem
 
-
   .tabsRoot
     display: flex
     flex-direction: column
     width: 100%
-    height: 100%
+    margin-top: 1rem
+    height: calc( 100% - 50px )
 
     .tabsList
       flex-shrink: 0
@@ -43,7 +40,6 @@
       border-bottom: 1px solid $blue-100
 
     .tabsTrigger
-      font-family: inherit
       background-color: white
       padding: 0 10px
       height: 45px
@@ -72,17 +68,31 @@
   .addUserContainer
     @include flex(center, center, column)
     width: 100%
+    height: 100%
+
+
+    .buttons
+      @include flex(center, center, row)
+      height: 50px
+      width: 100%
+      gap: .5rem
+      max-width: 300px
+
+    .search
+      width: 100%
+      max-width: 400px
 
     .users
       @include flex(flex-start, center, row)
       width: 100%
       overflow-y: auto
       overflow-x: hidden
-      height: 350px
+      height: 100%
       margin-top: 2rem
 
       .selected
-        background-color: $green-100
+        background-color: $green-100-op-50
+
       .user
         @include flex(center, space-between, row)
         width: 100%
@@ -99,20 +109,52 @@
           height: 1px
           background-color: $gray-400
           bottom: -5px
+          margin: 0 !important
 
-        button
-          border-radius: $default-radius
-          height: 30px
-          width: 30px
-          margin-left: auto
-          transition: background-color 0.2s ease
+        .buttonUser
+          @include flex(center, center, row)
+          gap: .5rem
+          position: relative
 
-          svg
-            margin: 0 auto
+          .addButton
+            background-color: $green-100
+            height: 30px
+            width: 30px
+            border-radius: $default-radius
+            transition: filter 0.2s ease
+            font-size: 1rem
+            &:hover
+              filter: brightness(0.8)
+            svg
+              margin: 0 auto
+              color: $white
+          p
+            width: 100px
+
+          >div
+            width: 30px
+            button
+              border-radius: $default-radius
+
+              height: 30px
+              width: 30px
+              transition: background-color 0.2s ease
+
+              svg
+                margin: 0 auto
 
   .users
     @include flex(space-around, space-around, column)
     height: 100%
+
+    .noUsers
+      @include flex(center, center, column)
+      height: 100%
+      margin-top: -2rem
+
+      svg
+        font-size: 5rem
+
 
     .userContainer
       height: 100%
@@ -128,6 +170,7 @@
           height: 1px
           background-color: $gray-700
           bottom: -5px
+
 
       .list
         width: 100%
