--- a/src/renderer/components/NewSidebar/components/CreateSafeBoxGroupModal/styles.module.sass
+++ b/src/renderer/components/NewSidebar/components/CreateSafeBoxGroupModal/styles.module.sass
@@ -25,7 +25,8 @@
 
   .title
     @include title()
-    margin-bottom: 3rem
+    margin-bottom: 1rem
+    margin-top: 2rem
 
   .actions, .close
     width: 100%
