--- a/src/renderer/pages/SafeBoxGroup/components/AddSafeBoxModal/styles.module.sass
+++ b/src/renderer/pages/SafeBoxGroup/components/AddSafeBoxModal/styles.module.sass
@@ -1,5 +1,16 @@
 @use '../../../../styles/_util' as *
 
+
+.content.light
+  .safeBoxes
+    @include scroolbarLight()
+
+.content.dark
+  .safeBoxes
+    @include scroolbarDark()
+
+
+
 .overlay
   height: 100vh
   width: 100vw
@@ -29,15 +40,17 @@
 
   .title
     @include title()
-    margin-bottom: 3rem
+    margin-bottom: 1rem
+    margin-top: 2rem
 
   .safeBoxes
-    @include flex(center, center, column)
+    @include flex(center, flex-start, column)
     overflow: auto
     margin-top: 1rem
     gap: 3px
     width: 100%
-    height: 100%
+    height: 250px
+
 
     .noSafeBox
       @include flex(center, center, column)
@@ -69,6 +82,13 @@
         h4
           font-weight: bold
           font-size: 1rem
+
+
+        h4, p
+          max-width: 600px
+          text-overflow: ellipsis
+          white-space: nowrap
+          overflow: hidden
 
       >div
         max-width: 40px
