--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -103,6 +103,17 @@ header
       p
         color: $gray-500
 
+      h3, p
+        max-width: 500px
+        text-overflow: ellipsis
+        white-space: nowrap
+        overflow: hidden
+
+        @media (max-width: 1200px)
+          max-width: 350px
+        @media (max-width: 1100px)
+          max-width: 250px
+
   .dropdown
     @include flex(center, center, row)
     width: 100%
