--- a/src/renderer/components/NewSidebar/components/CreateSafeBoxGroupModal/styles.module.sass
+++ b/src/renderer/components/NewSidebar/components/CreateSafeBoxGroupModal/styles.module.sass
@@ -1,5 +1,14 @@
 @use '../../../../styles/_util' as *
 
+.content.dark
+  background: $gray-900
+  color: $white
+
+
+.content.light
+  background: $white
+
+
 .overlay
   height: 100vh
   width: 100vw
