--- a/src/renderer/pages/SafeBoxGroup/components/AddSafeBoxModal/styles.module.sass
+++ b/src/renderer/pages/SafeBoxGroup/components/AddSafeBoxModal/styles.module.sass
@@ -1,6 +1,5 @@
 @use '../../../../styles/_util' as *
 
-
 .content.light
   .safeBoxes
     @include scroolbarLight()
@@ -8,8 +7,6 @@
 .content.dark
   .safeBoxes
     @include scroolbarDark()
-
-
 
 .overlay
   height: 100vh
@@ -49,7 +46,7 @@
     margin-top: 1rem
     gap: 3px
     width: 100%
-    height: 250px
+    height: calc(100% - 220px)
 
 
     .noSafeBox
@@ -92,6 +89,12 @@
 
       >div
         max-width: 40px
+
+      button
+        max-width: 30px
+        max-height: 30px
+
+
 
   .actions
     @include flex(center, center, row)
