--- a/src/renderer/components/SidebarWorkspace/components/WorkspaceSettingsMenu/styles.module.sass
+++ b/src/renderer/components/SidebarWorkspace/components/WorkspaceSettingsMenu/styles.module.sass
@@ -7,7 +7,6 @@
 .workspaceSettingsMenu.dark
   color: $white
 
-
   button
     background-color: transparent
     &:hover
@@ -76,7 +75,7 @@
         padding: .3rem .7rem
         border-radius: 5px
         transition: background-color 0.2s ease, color 0.2s ease
-
+        height: 25px
         svg
           font-size: 1.2rem
 
