--- a/src/renderer/pages/WorkspaceMembers/styles.module.sass
+++ b/src/renderer/pages/WorkspaceMembers/styles.module.sass
@@ -102,7 +102,7 @@
           .participant
             @include flex(center, center, row)
             width: 100%
-            margin-top: 1.5rem
+            margin-top: 14px
             position: relative
 
             &::before
