--- a/src/renderer/components/SidebarWorkspace/components/SafeBoxGroup/styles.module.sass
+++ b/src/renderer/components/SidebarWorkspace/components/SafeBoxGroup/styles.module.sass
@@ -15,6 +15,8 @@
     button
       svg
         color: $white
+      &:hover
+        background-color: $gray-500
 
   .text
     color: $white
@@ -42,7 +44,6 @@
       color: $gray-700
       &:last-child
         color: $gray-500
-
 
 // --------------------------------------------------------------
 // --------------------------- SETTINGS -------------------------
@@ -138,7 +139,7 @@
           height: 50%
           width: 1px
           top: 0
-          background-color: $gray-700
+          background-color: $gray-500
           left: 20px
 
   svg
