--- a/src/renderer/styles/dropdown.module.sass
+++ b/src/renderer/styles/dropdown.module.sass
@@ -6,11 +6,12 @@ button
 
 .DropdownMenuSubContent.dark,
 .DropdownMenuContent.dark
-  background-color: $gray-700
+  background-color: $gray-800
   box-shadow: 0px 10px 38px -10px rgb(22, 23, 24), 0px 10px 20px -15px rgba(22, 23, 24, 0.815)
   .DropdownMenuLabel
     color: $gray-400
-
+  .Label
+    color: $white
 
 
   .DropdownMenuItem,
@@ -32,6 +33,8 @@ button
   box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2)
   .DropdownMenuLabel
     color: $gray-700
+  .Label
+    color: $black
 
   .DropdownMenuItem,
   .DropdownMenuCheckboxItem,
