--- a/src/renderer/pages/ViewSafeBox/styles.module.sass
+++ b/src/renderer/pages/ViewSafeBox/styles.module.sass
@@ -74,6 +74,8 @@
         border-radius: $default-radius
         cursor: pointer
 
+
+        height: 28px
         transition: background-color 0.2s ease
 
         svg
